# PatheticFallacy

mikroserwis_eeg/: app.py  app_save_samples_to_excel.py  app_view.py  view.py
mikroserwis_eeg/brainaccess_board/: README.md  pyproject.toml
mikroserwis_eeg/brainaccess_board/brainaccess_board/: __init__.py  database.py  message_queue.py  py.typed  sq.py  stream.py  utils.py
